--- a/appsettings.json
+++ b/appsettings.json
@@ -34,8 +34,12 @@
       }
     }
   },
+
   "ConnectionStrings": {
     "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
     "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
+  },
+  "ArticleSettings": {
+    "PageSize": 5
   }
 }
